--- a/Markdown.Rmd
+++ b/Markdown.Rmd
@@ -203,15 +203,29 @@ e_common(theme = "london")
 
 # Introduction
 
-In 2020, I discover The New Abnormal album and I started to be obsessed with The Strokes, beyond listen to the album over and over, I also knew their previous work and loved as well. When I decided to try a project with webscraping and sentiment analysis, it seemed the perfect opportunity to use the songs i love so much and maybe understand some pattern from them. So here we go!
+In 2020, I discover The New Abnormal album and I started to be obsessed with The Strokes, beyond listen to the album over and over, I also knew their previous work and loved as well. When I decided to practice on a project project with webscraping and sentiment analysis, it seemed the perfect opportunity to use the songs i love so much and maybe understand some pattern from them. So here we go!
 
-I used data from Spotify and Vagalume, so I collect the lyrics and some numerical features that Spotify creates to measure some features of the songs, nad also which of the albumns the musics are from.
+I collect the data from Spotify and Vagalume (a website that shares songs lyrics and their translations into Portuguese), so I had access to the lyrics and some numerical features that Spotify creates to measure some features of the songs, and also other information, like which of the albums the musics are from. In case of curiosity of the code, I add buttons that allow to see the codes used. Any suggests are welcome!
 
 Some of the references I used are:
 
+* https://www.tidytextmining.com/tidytext.html
+* https://m-clark.github.io/text-analysis-with-R/
+* https://cbail.github.io/textasdata/word2vec/rmarkdown/word2vec.html
+* http://csinpi.github.io/pubs/mml12_moore.pdf
+* https://rpubs.com/nabiilahardini/word2vec
+* https://github.com/bnosac/ruimtehol
+* https://cran.r-project.org/web/packages/ruimtehol/vignettes/ground-control-to-ruimtehol.pdf
+* https://michaelmccarthy.netlify.app/post/embedding-multimedia-files-in-r-markdown-html-documents/
+* http://www.bnosac.be/index.php/blog/100-word2vec-in-R
+* https://help.displayr.com/hc/en-us/articles/360003127476-How-to-Create-Customized-Tables-Using-the-DT-R-Package
+
+
 # Word Clouds
 
-The first analysis is a Word Cloud, here we used all lyrics, exclude the stopwords. The bigger the word, more frequent it is in The Strokes discography. Here we can see a huge focus on the words ```time``` and ```wanna```. (Well, to me seens like the song [Under Control](https://www.youtube.com/watch?v=4895ajU27b0) contribuited a lot for this result)
+The first analysis is a Word Cloud, here we used all lyrics, but I excluded the stopwords, no futher transformations were made, like it is possible to see the words friend and friends below. The bigger the word, more frequent it is in The Strokes discography. Here we can see a huge focus on the words ```time``` and ```wanna```. (Well, it seems to me that the song [Under Control](https://www.youtube.com/watch?v=4895ajU27b0) contributed a lot for this result)
+
+(eu podia fazer esse stemming ai)
 
 ```{r message=F, warning=F}
 contagem <- songs %>% select(c(2,4)) %>%
@@ -234,7 +248,7 @@ contagem %>%
 
 # Number of words by Song
 
-Next, the question was the number of words in each song, to analise this feature a histogram was created and it is possible to see that the majority of the songs have between 150 to 250 words, here the stop words were keep on the data. The realesed song with least words was [Metabolism](https://www.youtube.com/watch?v=5YEHqiyb7AE) with about 3 minutes and 70 words and the song with the biggest amount of words is [Eternal Summer](https://www.youtube.com/watch?v=5c3EjeP2x-Q) which has aproximately 6 minutes long where we can listen to 395 words.
+Next, the question was the number of words in each song, a histogram was created to analyze this feature and it is possible to see that the majority of the songs have between 150 to 250 words, here the stop words were kept on the data. Beyond that, the released song with least words was [Metabolism](https://www.youtube.com/watch?v=5YEHqiyb7AE) with about 3 minutes and 70 words and the song with the biggest amount of words is [Eternal Summer](https://www.youtube.com/watch?v=5c3EjeP2x-Q) which has about 6 minutes long and we can listen to 395 words.
 
 
 ```{r message=FALSE, warning=FALSE}
@@ -254,9 +268,6 @@ num_por_song  %>%
             textStyle = list(color = '#333'))
 ```
 
-WHAT ABOUT A DIVISION BY ALBUM??
-
-
 ```{r message=FALSE, warning=FALSE}
 menor <- num_por_song %>% slice_min(order_by = n, n = 1)
 menor_mus <- menor %>% pull(SName)
@@ -268,11 +279,15 @@ maior_quant <- maior %>% pull(n)
 
   
 <div class = "metade">
-Agora é ver se eu consigo deixar um do lado do outro...
+`r menor_mus`
+</br>
+`r menor_quant` min
 </div>
   
 <div class = "metade">
-Here, I use 3 subunits of size 4 (4x3=12). The last column is used for a plot. You can read more about the grid system [here](bootstrap grid system). I got this result showing the following code in my R Markdown document.
+`r maior_mus`
+</br>
+`r maior_quant` min
 </div>
 
 
@@ -312,9 +327,9 @@ Here, I use 3 subunits of size 4 (4x3=12). The last column is used for a plot. Y
 
 # Sentiment Analysis
 
-Other possible analysis is the Sentiment Analysis, here used the NRC technique, each word receive a label with a sentiment, there are 10 sentiments: Anger, Anticipation, Disgust, Fear, Joy, Negative, Positive, Sadness, Surprise, Trust. Unfortunately, this analysis doesn't capture the context of the words, a aspect that changes the whole meaning, but let's go! 
+Other possible analysis is the Sentiment Analysis, here I used the NRC technique, each word receive a label with a sentiment, there are 10 possibilities: Anger, Anticipation, Disgust, Fear, Joy, Negative, Positive, Sadness, Surprise and Trust. Unfortunately, this analysis doesn't capture the context of the words, a aspect that changes the whole meaning, but let's go! 
 
-In the first plot is possible to see the frequency of all sentiments beyond all songs, the Negative sentiment is the most frequent and then we have the Positive sentiment, so it's no possible to highlight nothing. In the next part we can compare the songs in the same album.
+In the first plot is possible to see the frequency of all sentiments beyond all songs, the Negative sentiment is the most frequent and then we have the Positive sentiment, so it's hard to conclude further than this. In the next part we can compare the sentiments in the songs in each album.
 
 ```{r message=FALSE, warning=FALSE}
 sentiments <- get_sentiments("nrc")
@@ -418,7 +433,7 @@ prop_sent_by_song <- function(input_album){
 
 ### Is This It
 
-The album _Is This It_ has a lot of Negative sentiment, mainly the sonh whos name the album [Is This It](https://www.youtube.com/watch?v=Hgqp7l9s_9o) on the other hand we have the song [Last Night](https://www.youtube.com/watch?v=TOypSnKFHrE) with the biggest proportion of words with Positive sentiments.
+The album _Is This It_ has a lot of Negative sentiment, mainly the song which name the album, [Is This It](https://www.youtube.com/watch?v=Hgqp7l9s_9o), on the other hand we have the song [Last Night](https://www.youtube.com/watch?v=TOypSnKFHrE) with the biggest proportion of words with Positive sentiments. I believe in those two songs the instrumental reflects those sentiments too. In general, the sentiments in the album seem balanced.
 
 ```{r echo=FALSE}
 prop_sent_by_song("Is This It")
@@ -426,7 +441,7 @@ prop_sent_by_song("Is This It")
 
 ### Room On Fire
 
-Here in _Room on Fire_, the song [The End Has No End](https://www.youtube.com/watch?v=8sQoX12zo-A) is the the one with the biggest amount of Negative words, while [Meet Me In The Bathroom](https://www.youtube.com/watch?v=Ykvf7oR0JBY) has the biggest amount of Positive words.
+Here in _Room on Fire_, the song [The End Has No End](https://www.youtube.com/watch?v=8sQoX12zo-A) is the the one with the biggest amount of Negative words, while [Meet Me In The Bathroom](https://www.youtube.com/watch?v=Ykvf7oR0JBY) has the biggest amount of Positive words. Again, the album is balanced in the sentiments looking at all songs.
 
 ```{r echo=FALSE}
 prop_sent_by_song("Room On Fire")
@@ -434,7 +449,7 @@ prop_sent_by_song("Room On Fire")
 
 ### First Impressions of Earth
 
-In the third album of the band, we can see the the song [Killing Lies](https://www.youtube.com/watch?v=7BhWk7knpfo) where a significant proportion of the words are Negative and other negative fellings, and the famous [You Only Live Once](https://www.youtube.com/watch?v=pT68FS3YbQ4) has a bunch of Positive words. 
+In the third album of the band, we can see that the song [Killing Lies](https://www.youtube.com/watch?v=7BhWk7knpfo) has a significant proportion of the words is Negative and other negative feelings, while the famous [You Only Live Once](https://www.youtube.com/watch?v=pT68FS3YbQ4) has a bunch of Positive words. In these cases, again the rhythm seems to accompany the sentiments.
 
 ```{r echo=FALSE}
 prop_sent_by_song("First Impressions Of Earth")
@@ -442,7 +457,7 @@ prop_sent_by_song("First Impressions Of Earth")
 
 ### Angles
 
-Now, in the _Angles_ album we have [You're So Right](https://www.youtube.com/watch?v=L-5Tdlhmh0Y) with the biggest proportion of Negative sentiments and [Two Kind Of Happinnes](https://www.youtube.com/watch?v=dr-KUP55hC8) in the opposite feature.
+Now, in the _Angles_ album we have [You're So Right](https://www.youtube.com/watch?v=L-5Tdlhmh0Y) with the biggest proportion of Negative sentiments and [Two Kind Of Happinnes](https://www.youtube.com/watch?v=dr-KUP55hC8) in the opposite situation. Looking at all the songs, this album has more proportion of feelings classified as negative.
 
 ```{r echo=FALSE}
 prop_sent_by_song("Angles")
@@ -450,7 +465,7 @@ prop_sent_by_song("Angles")
 
 ### Comedown Machine
 
-Here we see a some interesting behaviors, we have a song which contains just words with negative aspects, [Call it Fate, Call it Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg), on the other side, [Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) has only positive aspects.
+Here we see a some interesting behaviors, we have a song which contains just words with negative aspects, [Call it Fate, Call it Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg), on the other side, [Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) has only positive aspects. The other songs have a behavior pretty much similar with the previous albums.
 
 ```{r echo=FALSE}
 prop_sent_by_song("Comedown Machine")
@@ -458,7 +473,7 @@ prop_sent_by_song("Comedown Machine")
 
 ### Future Present Past
 
-In this EP, with only 3 songs, which are organized in in the top of positiviness with [Oblivious](https://www.youtube.com/watch?v=jEjdwhVuW74), followed by [Threat of Joy](https://www.youtube.com/watch?v=IJNgvS-sA-s) and [Drag Queen](youtube.com/watch?v=ts7cgeZC5J0)
+In this EP, with only 3 songs, the songs are organized in in the top of positiviness with [Oblivious](https://www.youtube.com/watch?v=jEjdwhVuW74), followed by [Threat of Joy](https://www.youtube.com/watch?v=IJNgvS-sA-s) and [Drag Queen](youtube.com/watch?v=ts7cgeZC5J0). 
 
 ```{r echo=FALSE}
 prop_sent_by_song("Future Present Past")
@@ -466,7 +481,7 @@ prop_sent_by_song("Future Present Past")
 
 ### The New Abnormal
 
-About the last album of the band (but I hope more is coming lol) it is possible to see that [The Adults Are Talking](https://www.youtube.com/watch?v=ewOPQZZn4SY) has the biggest proportion of negative sentiments, while [Ode to the Mets](https://www.youtube.com/watch?v=BjC0KUxiMhc) has the biggest proportion of positive sentiments, although, this proportion represents just a little more then 50%.
+About the last album of the band (but I hope more is coming lol) it is possible to see that [The Adults Are Talking](https://www.youtube.com/watch?v=ewOPQZZn4SY) has the biggest proportion of negative sentiments, while [Ode to the Mets](https://www.youtube.com/watch?v=BjC0KUxiMhc) has the biggest proportion of positive sentiments, although, this proportion represents just a little more then 50%. This is the album with the biggest proportion of negative between all songs.
 
 ```{r echo=FALSE}
 prop_sent_by_song("The New Abnormal")
@@ -474,7 +489,7 @@ prop_sent_by_song("The New Abnormal")
 
 ### Others
 
-And finally we have some Side-B songs, demos and covers from the guys that were put on the site where I webscrap. The most positives songs are Elephant Song, Hawaii and I'll Try Anything Once (by the way, this is my favorite song ever). And with the negatives there is Modern Girls & Old Fashioned Men 
+And finally we have some Side-B songs, demos and covers from the band and that were available on the site where I collect the lyrics. The most positives songs are Elephant Song, Hawaii and I'll Try Anything Once (by the way, this is my favorite song ever). And with the negatives there is Modern Girls & Old Fashioned Men. 
 
 ```{r echo=FALSE}
 prop_sent_by_song("Others")
@@ -510,11 +525,11 @@ gauge_trios <- function(sent){
 }
 ```
 
-It is possible to analyse in the oppostite way, in other words, we can fix the sentiments and them look which songs have the biggest proportion.
+Now, we gonna do a similar analysis, given a sentiment let's look  which songs have the biggest proportion. Here a have the top 3.
 
 ### Anger
 
-The three songs with the biggest proportion of anger words are: [Is This It](https://www.youtube.com/watch?v=Hgqp7l9s_9o),[You're So Right](https://www.youtube.com/watch?v=L-5Tdlhmh0Y) and [The Adults Are Talking](https://www.youtube.com/watch?v=ewOPQZZn4SY), all of them with more than 1/5 of the words as anger sentiments. Each song is from a different album, from diffenrents moments of time.
+The three songs with the biggest proportion of anger words are: [Is This It](https://www.youtube.com/watch?v=Hgqp7l9s_9o), [You're So Right](https://www.youtube.com/watch?v=L-5Tdlhmh0Y) and [The Adults Are Talking](https://www.youtube.com/watch?v=ewOPQZZn4SY), all of them with more than 1/5 of the words as anger sentiments. Each song is from a different album, one in the first album, one in the middle of the career and the last one in the lastest album.
 
 ```{r echo=FALSE}
 gauge_trios("Anger")
@@ -523,7 +538,7 @@ gauge_trios("Anger")
 
 ### Anticipation
 
-About the Antecipation sentiment, we can see that the song [You Talk Way Too Much](https://www.youtube.com/watch?v=G9OLlofojX8) has 63% of the words with this sentiment, which is increadible, in the second position we have [Call It Fate, Call It Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg) with 50% of Anticapation words and then [Vision of Division](https://www.youtube.com/watch?v=jBx9gQyiYoo). Also, each song is from a different album.
+About the Anticipation sentiment, we can see that the song [You Talk Way Too Much](https://www.youtube.com/watch?v=G9OLlofojX8) has 63% of the words with this sentiment, which is incredible, in the second position we have [Call It Fate, Call It Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg) with 50% of Anticipation words and then [Vision of Division](https://www.youtube.com/watch?v=jBx9gQyiYoo). Also, each song is from a different album.
 
 ```{r echo=FALSE}
 gauge_trios("Anticipation")
@@ -531,7 +546,7 @@ gauge_trios("Anticipation")
 
 ### Disgust
 
-When we see the Disgust sentiment, [Call It Fate, Call It Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg) is present again, followed by At The Summer, probably a cover from them, and then [At The Door](https://www.youtube.com/watch?v=9CAz_vvsK9M).
+When we see the Disgust sentiment, [Call It Fate, Call It Karma](https://www.youtube.com/watch?v=Txn5-dKLFHg) is present again, followed by At The Summer, probably a cover from the band, and next we have [At The Door](https://www.youtube.com/watch?v=9CAz_vvsK9M).
 
 ```{r echo=FALSE}
 gauge_trios("Disgust")
@@ -540,7 +555,7 @@ gauge_trios("Disgust")
 
 ### Fear
 
-Now, we can see the songs with the biggest proportion of Fear related words, the first one is [Ask Me Anything](https://www.youtube.com/watch?v=UsW040wrMNA), followed by the EP sond [Drag Queen](https://www.youtube.com/watch?v=mBotY_n27VA) and in the thirth place we have [50/50](https://www.youtube.com/watch?v=_3YYEU4_x_0)
+Now, we can see the songs with the biggest proportion of Fear related words, the first one is [Ask Me Anything](https://www.youtube.com/watch?v=UsW040wrMNA), followed by the EP song [Drag Queen](https://www.youtube.com/watch?v=mBotY_n27VA) and in the third place we have [50/50](https://www.youtube.com/watch?v=_3YYEU4_x_0)
 
 ```{r echo=FALSE}
 gauge_trios("Fear")
@@ -548,7 +563,7 @@ gauge_trios("Fear")
 
 ### Joy
 
-[Laaaaaaaaast Nite](https://www.youtube.com/watch?v=TOypSnKFHrE) is the song with the biggest amount of Joyfull words among The Strokes songs, next we have [Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) with almost 29% of words with Joy sentiment, and finally [Meet Me In The Bathroom](https://www.youtube.com/watch?v=Ykvf7oR0JBY)
+[Laaaaaaaaast Nite](https://www.youtube.com/watch?v=TOypSnKFHrE) is the song with the biggest amount of Joyfull words among The Strokes songs, next we have [Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) with almost 29% of words with Joy sentiment, and finally [Meet Me In The Bathroom](https://www.youtube.com/watch?v=Ykvf7oR0JBY).
 
 ```{r echo=FALSE}
 gauge_trios("Joy")
@@ -572,7 +587,7 @@ gauge_trios("Positive")
 
 ### Sadness
 
-The song with the biggest proportion of sadness words is [Modern Girls & Old Fashion Men](https://www.youtube.com/watch?v=38NWydYtEKY), the second one is [Post Modern Girls](https://www.youtube.com/watch?v=kin3__wyOos), both with Regina Spektor, what a coincidence, and [Take It Or Leave It](https://www.youtube.com/watch?v=bG7ZMiH6xA4) in the thisd position.
+The song with the biggest proportion of sadness words is [Modern Girls & Old Fashion Men](https://www.youtube.com/watch?v=38NWydYtEKY), the second one is [Post Modern Girls](https://www.youtube.com/watch?v=kin3__wyOos), both with Regina Spektor, what a coincidence, and [Take It Or Leave It](https://www.youtube.com/watch?v=bG7ZMiH6xA4) in the third position.
 
 ```{r echo=FALSE}
 gauge_trios("Sadness") 
@@ -580,7 +595,7 @@ gauge_trios("Sadness")
 
 ### Surprise
 
-Again, you see [Take It Or Leave It](https://www.youtube.com/watch?v=bG7ZMiH6xA4), the next song is [Metabolism](https://www.youtube.com/watch?v=5YEHqiyb7AE) and there is also [Automatic Stop](https://www.youtube.com/watch?v=wveUjX6KFR8). Again a case which every song is from a album.
+About the surprise element, again, you see [Take It Or Leave It](https://www.youtube.com/watch?v=bG7ZMiH6xA4), the next song is [Metabolism](https://www.youtube.com/watch?v=5YEHqiyb7AE) and there is also [Automatic Stop](https://www.youtube.com/watch?v=wveUjX6KFR8). Again a case which every song is from a album.
 
 ```{r echo=FALSE}
 gauge_trios("Surprise")
@@ -588,7 +603,7 @@ gauge_trios("Surprise")
 
 ### Trust
 
-[Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) is the song with the biggest proportion of trust sentiment, together we see [Ode To The Mets](https://www.youtube.com/watch?v=BjC0KUxiMhc) and [Alone, Together](https://www.youtube.com/watch?v=oUW7V4X0My0)
+[Tap Out](https://www.youtube.com/watch?v=6KOT5kg59KI) is the song with the biggest proportion of trust sentiments, together we see [Ode To The Mets](https://www.youtube.com/watch?v=BjC0KUxiMhc) and [Alone, Together](https://www.youtube.com/watch?v=oUW7V4X0My0)
 
 ```{r echo=FALSE}
 gauge_trios("Trust")
@@ -764,6 +779,20 @@ gauge_trios("Trust")
 
 # Spotify Data {.tabset .tabset-fade .tabset-pills}
 
+It's time to focus in the Spotify features. They are all numeric and describe some aspects from the songs. Below there is a table with the description of the features, in case of curiosity. 
+
+|Variable              |Description |
+|:-------|:--------------------------------|
+|danceability             | Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0.0 is least danceable and 1.0 is most danceable. |
+|energy                 | Energy is a measure from 0.0 to 1.0 and represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. Perceptual features contributing to this attribute include dynamic range, perceived loudness, timbre, onset r  | The estimated overall key of the track. Integers map to pitches using standard Pitch Class notation . E.g. 0 = C, 1 = C♯/D♭, 2 = D, and so on. If no key was detected, the value is -1. |
+|loudness               | The overall loudness of a track in decibels (dB). Loudness values are averaged across the entire track and are useful for comparing relative loudness of tracks. Loudness is the quality of a sound that is the primary psychological correlate of physical strength (amplitude). Values typical range between -60 and 0 db.|
+|mode                     | Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived. Major is represented by 1 and minor is 0.|
+|speechiness             | Speechiness detects the presence of spoken words in a track. The more exclusively speech-like the recording (e.g. talk show, audio book, poetry), the closer to 1.0 the attribute value. Values above 0.66 describe tracks that are probably made entirely of spoken words. Values between 0.33 and 0.66 describe tracks that may contain both music and speech, either in sections or layered, including such cases as rap music. Values below 0.33 most likely represent music and other non-speech-like tracks. |
+|acousticness              | A confidence measure from 0.0 to 1.0 of whether the track is acoustic. 1.0 represents high confidence the track is acoustic.|
+|instrumentalness       | Predicts whether a track contains no vocals. “Ooh” and “aah” sounds are treated as instrumental in this context. Rap or spoken word tracks are clearly “vocal”. The closer the instrumentalness value is to 1.0, the greater likelihood the track contains no vocal content. Values above 0.5 are intended to represent instrumental tracks, but confidence is higher as the value approaches 1.0. |
+|liveness                 |double    | Detects the presence of an audience in the recording. Higher liveness values represent an increased probability that the track was performed live. A value above 0.8 provides strong likelihood that the track is live. |
+|valence                 | A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry). |
+|tempo                 | The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration. |
 
 ```{r}
 boxplot_por_album <- function(var){
@@ -1205,7 +1234,7 @@ Maybe some of the points more close with the desired correlation are Hard to Exp
 A attempt with the inverse of the Distance was also made to try see the features with the same logic of similarity, but the relation keep pretty similar.
 
 
-```{r}
+```{r message=F}
 similaridades %>%
   inner_join(distancias) %>%
   mutate(Dupla = paste(Song1, Song2, sep = " vs ")) %>%
@@ -1215,7 +1244,7 @@ similaridades %>%
             ) %>%
   e_loess(`Distância` ~ Similaridade, showSymbol = FALSE) %>%
   e_lm(`Distância` ~ Similaridade, showSymbol = FALSE) %>%
-  e_axis_labels(x = "Cossine Similarity - Lyrics", y = "Euclydian Distance - Spotify Features") %>% 
+  e_axis_labels(x = "Cossine Similarity - Lyrics              ", y = "              Euclydian Distance - Spotify Features") %>% 
   e_tooltip(formatter = htmlwidgets::JS("
       function(params){
         return('<strong>' + params.name +
@@ -1324,24 +1353,26 @@ cbind(data_cluster,
 
 Acredito que o PCA1 é muito influenciado por energia e tal e outro?
 
+Below there is the songs listed and it is possible to filter the groups and look each song. 
+
 ```{r}
-agrupamentos <- songs %>%
+groups <- songs %>%
   select(2, 6:14) %>%
   drop_na() %>%
-  mutate(agrupamento = fitted(k3, method = "class"),
-         agrupamento = ifelse(agrupamento > 1, agrupamento + 1, agrupamento),
-           agrupamento = ifelse(agrupamento == 4, 2, agrupamento))
+  mutate(Group = fitted(k3, method = "class"),
+         Group = ifelse(Group > 1, Group + 1, Group),
+         Group = ifelse(Group == 4, 2, Group))
 
-shared_agrupamentos <- SharedData$new(agrupamentos)
+shared_groups <- SharedData$new(groups)
 
 bscols(widths = c(3, NA),
 
   list(
     filter_select("agrupamento", "Pick a Group",
-                  shared_agrupamentos, ~agrupamento, multiple = F)
+                  shared_groups, ~Group, multiple = F)
   ),
 
-  datatable(shared_agrupamentos, width = 500,
+  datatable(shared_groups, width = 500,
             class = "cell-border hover row-border",
     options = list(
       dom = 'tip',
@@ -1361,19 +1392,23 @@ bscols(widths = c(3, NA),
 
 ## uns boxplot {.tabset .tabset-pills .tabcontent}
 
+In order to analyse the properties of each of the groups, the boxplots of each features are seem below.
+
+In summary, seems that the Group 1 has the calm songs, the Group 2 the happy (?) ones and in the Group 3 has left the loud and dirty ones??
+
 ```{r}
 boxplot_por_grupo <- function(var){
 
   # Ainda estressada com os labels do eixo x;
   # E as tooltips com Is This It em tudo??
 
-  agrupamentos %>%
-    mutate(agrupamento = paste("Grupo", agrupamento)) %>%
-    pivot_wider(id_cols = SName, names_from = agrupamento, values_from = !!sym(var)) %>%
+  groups %>%
+    mutate(Group = paste("Group", Group)) %>%
+    pivot_wider(id_cols = SName, names_from = Group, values_from = !!sym(var)) %>%
     e_charts() %>%
-    e_boxplot(`Grupo 1`) %>%
-    e_boxplot(`Grupo 2`) %>%
-    e_boxplot(`Grupo 3`) %>%
+    e_boxplot(`Group 1`) %>%
+    e_boxplot(`Group 2`) %>%
+    e_boxplot(`Group 3`) %>%
     # e_boxplot(`Grupo 4`) %>%
     e_color("#AC3D3D") %>%
     e_tooltip(backgroundColor = "rgb(255,255,255,0.8)",
@@ -1386,11 +1421,15 @@ boxplot_por_grupo <- function(var){
 
 ### Danceability
 
+Looking at the Danceability, we cansay that the Group 2 has highier values in general.
+
 ```{r echo=FALSE}
 boxplot_por_grupo("danceability")
 ```
 
 ### Energy
+
+The energy has a asceding increase among the groups, it is nitiduous that the first one is the lowest energy.
 
 ```{r echo=FALSE}
 boxplot_por_grupo("energy")
@@ -1398,11 +1437,15 @@ boxplot_por_grupo("energy")
 
 ### Loudness
 
+Again the first group has the less louder profile?
+
 ```{r echo=FALSE}
 boxplot_por_grupo("loudness")
 ```
 
 ### Speechiness
+
+The Speechiness is pretty similar in every group.
 
 ```{r echo=FALSE}
 boxplot_por_grupo("speechiness")
@@ -1410,11 +1453,15 @@ boxplot_por_grupo("speechiness")
 
 ### Acousticness
 
+In this case, the group 1 is the highlight, with values of acousticness much higher than the other groups.
+
 ```{r echo=FALSE}
 boxplot_por_grupo("acousticness")
 ```
 
 ### Instrumentalness
+
+The Instrumentalness is similar in all groups and also has a high variability.
 
 ```{r echo=FALSE}
 boxplot_por_grupo("instrumentalness")
@@ -1422,11 +1469,15 @@ boxplot_por_grupo("instrumentalness")
 
 ### Valence
 
+Here, the second group is the highlight with the biggest mean but also with the biggest variance.
+
 ```{r echo=FALSE}
 boxplot_por_grupo("valence")
 ```
 
 ### Tempo
+
+Yeah... Also pretty much similar.
 
 ```{r echo=FALSE}
 boxplot_por_grupo("tempo")
